@@ -1,3 +1,4 @@
+	* non-auto-managed torrents no longer count against the torrent limits
 	* handle DHT error responses correctly
 	* allow force_announce to only affect a single tracker
 	* add moving_storage field to torrent_status
